# todo-app

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json
backend/todo-api/: CLAUDE.md  Dockerfile  pyproject.toml
backend/todo-api/src/todo_api/: __init__.py  main.py  models.py  progress_client.py  routes.py  storage.py
backend/todo-api/tests/: test_api.py
backend/todo-progress-api/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
backend/todo-progress-api/src/todo_progress_api/: __init__.py  main.py  models.py  routes.py  storage.py
backend/todo-progress-api/tests/: test_api.py
frontend/: CLAUDE.md  Dockerfile  app.js  index.html  nginx.conf  style.css
frontend-v2/: Dockerfile  README.md  pyproject.toml
frontend-v2/src/todo_frontend/: client.py  main.py  routes.py
frontend-v2/static/: style.css
frontend-v2/templates/: base.html  history.html  index.html
k8s/: frontend-v2.yaml  frontend.yaml  pod-frontend-v2.yaml  pod-frontend.yaml  pod-todo-api.yaml  pod-todo-progress-api.yaml  todo-api.yaml  todo-progress-api.yaml
