[project]
name = "todo-frontend"
version = "0.1.0"
description = "Server-side rendered frontend for the todo app"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.39.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
