[project]
name = "todo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hassan Ali", email = "syedhassanali85@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "eval-type-backport>=0.3.1",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.39.0",
]

[project.scripts]
todo-api = "todo_api:main"

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
